fixed sidebar position overlapping content

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -4,7 +4,6 @@
 .sidebar {
     width: 100%;
     &__inner {
-        position: relative;
         padding: 25px 20px 0;
     }
 }
